--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/PDS_Vozne_NB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.ojdbc7.jar=D:\\mySHAREPOINT\\OneDrive - University of Zilina\\uniza\\ING-2-Z\\PDS-opakujuci\\semestralka\\PDS_Vozne\\lib\\ojdbc7.jar
+file.reference.ojdbc7.jar=libs/ojdbc7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
