Generovanie historie cien

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ojdbc7.jar=libs/ojdbc7.jar
+file.reference.xdb.jar=libs\\xdb.jar
+file.reference.xmlparserv2.jar=libs\\xmlparserv2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.xdb.jar}:\
+    ${file.reference.xmlparserv2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
